package Management;

public interface ProfilerStrategy {
    void profile();
}
