package Management;

public interface MonitoringStrategy {
    void monitor();
}
