package Management;

public class TeslaCompilerStrategy implements CompilerStrategy {
    @Override
    public void compile() {
        System.out.println("Compiling with Tesla compiler strategy.");
    }
}
