package Management;

public class TeslaProfilerStrategy implements ProfilerStrategy {
    @Override
    public void profile() {
        System.out.println("Profiling with Tesla profiler strategy.");
    }
}
