@startuml

title __MANAGEMENT's Class Diagram__\n

  namespace Management {
    interface Management.CompilerStrategy {
        {abstract} + compile()
    }
  }
  

  namespace Management {
    class Management.FermiCompilerStrategy {
        + compile()
    }
  }
  

  namespace Management {
    class Management.FermiMonitoringStrategy {
        + monitor()
    }
  }
  

  namespace Management {
    class Management.FermiProfilerStrategy {
        + profile()
    }
  }
  

  namespace Management {
    interface Management.MonitoringStrategy {
        {abstract} + monitor()
    }
  }
  

  namespace Management {
    class Management.NvidiaToolkit {
        + NvidiaToolkit()
        + compile()
        + monitor()
        + profile()
    }
  }
  

  namespace Management {
    class Management.PascalCompilerStrategy {
        + compile()
    }
  }
  

  namespace Management {
    class Management.PascalMonitoringStrategy {
        + monitor()
    }
  }
  

  namespace Management {
    class Management.PascalProfilerStrategy {
        + profile()
    }
  }
  

  namespace Management {
    interface Management.ProfilerStrategy {
        {abstract} + profile()
    }
  }
  

  namespace Management {
    class Management.TeslaCompilerStrategy {
        + compile()
    }
  }
  

  namespace Management {
    class Management.TeslaMonitoringStrategy {
        + monitor()
    }
  }
  

  namespace Management {
    class Management.TeslaProfilerStrategy {
        + profile()
    }
  }
  

  Management.FermiCompilerStrategy .up.|> Management.CompilerStrategy
  Management.FermiMonitoringStrategy .up.|> Management.MonitoringStrategy
  Management.FermiProfilerStrategy .up.|> Management.ProfilerStrategy
  Management.NvidiaToolkit o-- Management.CompilerStrategy : compiler
  Management.NvidiaToolkit o-- Management.MonitoringStrategy : monitoringTool
  Management.NvidiaToolkit o-- Management.ProfilerStrategy : profiler
  Management.PascalCompilerStrategy .up.|> Management.CompilerStrategy
  Management.PascalMonitoringStrategy .up.|> Management.MonitoringStrategy
  Management.PascalProfilerStrategy .up.|> Management.ProfilerStrategy
  Management.TeslaCompilerStrategy .up.|> Management.CompilerStrategy
  Management.TeslaMonitoringStrategy .up.|> Management.MonitoringStrategy
  Management.TeslaProfilerStrategy .up.|> Management.ProfilerStrategy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
